--- a/jquerydiv.html
+++ b/jquerydiv.html
@@ -57,7 +57,7 @@
 </head>
 
 <body>
-     <div class="box" data-color="red">Red</div>
+     <div class="box" data-color="red">purple</div>
 
           <div class="box" data-color="green">green</div>
 
@@ -81,6 +81,7 @@
 </body>
 
 </html>
+
 
 
 
